scray-examples/ml-job-coordination/agent/oci-image-builder/src/test/resources/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: SCARY-APP-SERVICE
spec:
  selector:
    app: SCRAY-APP-LABLE
  ports:
    - port: 5678
